--- a/FrotiX.Site.OLD/Pages/Viagens/Upsert.cshtml
+++ b/FrotiX.Site.OLD/Pages/Viagens/Upsert.cshtml
@@ -1453,6 +1453,7 @@
                                             <span class="text-danger font-weight-light"
                                                 asp-validation-for="ViagemObj.Viagem.DataFinal"></span>
                                             <input id="txtDataFinal" name="ViagemObj.Viagem.DataFinal" 
+                                                placeholder="dd/MM/yyyy"
                                                 style="width: 100%; height: 38px;" />
                                         </div>
                                         <div class="col-6 col-md-2">
@@ -1462,6 +1463,7 @@
                                             <span class="text-danger font-weight-light"
                                                 asp-validation-for="ViagemObj.Viagem.HoraFim"></span>
                                             <input id="txtHoraFinal" name="ViagemObj.Viagem.HoraFim" 
+                                                placeholder="HH:mm"
                                                 style="width: 100%; height: 38px;" />
                                         </div>
                                         <div class="col-6 col-md-2">
@@ -3296,6 +3298,7 @@
                     culture: "pt-BR",
                     min: dataMinima,
                     max: dataMaxima,
+                    placeholder: "dd/MM/yyyy",
                     dateInput: {
                         format: "dd/MM/yyyy",
                         messages: {
@@ -3304,7 +3307,6 @@
                             day: "dd"
                         }
                     },
-                    placeholder: "dd/MM/yyyy",
                     value: @Html.Raw(Model.ViagemObj?.Viagem?.DataFinal != null ? 
                         $"new Date({Model.ViagemObj.Viagem.DataFinal.Value.Year}, {Model.ViagemObj.Viagem.DataFinal.Value.Month - 1}, {Model.ViagemObj.Viagem.DataFinal.Value.Day})" : 
                         "null"),
@@ -3325,6 +3327,7 @@
                     format: "HH:mm",
                     culture: "pt-BR",
                     interval: 15,
+                    placeholder: "HH:mm",
                     dateInput: {
                         format: "HH:mm",
                         messages: {
@@ -3332,7 +3335,6 @@
                             minute: "mm"
                         }
                     },
-                    placeholder: "HH:mm",
                     value: @Html.Raw(Model.ViagemObj?.Viagem?.HoraFim != null ? 
                         $"new Date(0,0,0,{Model.ViagemObj.Viagem.HoraFim.Value.Hour},{Model.ViagemObj.Viagem.HoraFim.Value.Minute})" : 
                         "null"),
